2013-04-03  Murray Cumming  <murrayc@murrayc.com>

	Document: Use DocumentTableInfo by sharedptr<>.

	* glom/glom/libglom/document/document.[h|cc]:
	get_tables(): Have both const and non-const overloads of this
	method, to allow proper use of const elsewhere.
	* glom/libglom/db_utils.cc: Adapted.

2013-04-03  Murray Cumming  <murrayc@murrayc.com>

	Document: Use DocumentTableInfo by sharedptr<>.

	* glom/glom/libglom/document/document.[h|cc]:
	DocumentTableInfo: Remove the copy constructor and operator=(),
	making them private and unimplemented. Use it by sharedptr<>
	instead to be more efficient and simpler.
	Add get_table_info() so we can check for a null sharedptr<>
	instead of repeatedly using std::map::find() awkwardly.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

        Update another test .glom file.

	* examples/sqlite/test_sqlite_music/test_sqlite_music.glom:
	Remove the parent_table attributes.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

        LayoutInfo: Remove the superfluous parent_table.

        * glom/glom/libglom/document/document.[h|cc]:
	LayoutInfo: Do not bother storing the parent table here because
	these are all stored in a table-specific map anyway.
        * glom/glom/glom_document.dtd: Remove the mention of the
	parent_table attribute. The parent table node already specifies
	it.
        * glom/examples/*.glom: Resave these without the parent_table
	attributes.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

        Dialog_FlowTable: Make a getter const.

        * glom/utility_widgets/dialog_flowtable.[h|cc]:
	Make get_columns_count() const.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

        LayoutItem_Portal: Do not implement get_part_type_name().

        * glom/libglom/data_structure/layout/layoutitem_portal.[h|cc]:
	Remove the get_part_type_name() override because it adds
	a translation that we never use. We only ever instantiate the
	derived portal types.
